k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simpletimeservice
  labels:
    app: simpletimeservice
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: simpletimeservice
